<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="nu.douhan.madonomics.RprActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" >
            <requestFocus />
        </LinearLayout>

        <TextView
            android:id="@+id/txtInterest01"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest01Header"
            android:textSize="@dimen/header"
            />

        <TextView
            android:id="@+id/txtInterest02"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest02Text"
            android:textSize="@dimen/text"
            />

        <TextView
            android:id="@+id/txtInterest03"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest03Text"
            android:textSize="@dimen/text"
            />

        <TextView
            android:id="@+id/txtInterest04"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest04Text"
            android:textSize="@dimen/text"
            />

        <TextView
            android:id="@+id/txtInterest05"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest05Text"
            android:textSize="@dimen/text"
            />

        <TextView
            android:id="@+id/txtInterest06"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest06Text"
            android:textSize="@dimen/text"
            />

        <TextView
            android:id="@+id/txtInterest07"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInterest07Text"
            android:textSize="@dimen/text"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/txtRprMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRprMonthText"
            />

        <EditText
            android:id="@+id/edtRprMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtRprRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRprRevenueText"
            />

        <EditText
            android:id="@+id/edtRprRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtRprStartAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRprAmountText"
            />

        <EditText
            android:id="@+id/edtRprStartAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtRprYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRprYearsText"
            />

        <EditText
            android:id="@+id/edtRprYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnRprSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate"
            android:layout_marginTop="15dp"
            android:background="@color/btnBG"
            android:textColor="@color/btnText"
            />

        <TextView
            android:id="@+id/txtRprResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/resRprResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtRprTotalRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/resRprTotalRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtRprInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/resRprInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtRprDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

    </LinearLayout>

</ScrollView>

