<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="nu.douhan.madonomics.FriActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" >
            <requestFocus />
        </LinearLayout>

        <TextView
            android:id="@+id/txtFree01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFree01Header"
            android:textSize="@dimen/header"
            />

        <TextView
            android:id="@+id/txtFree02"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFree02Text"
            android:textSize="@dimen/text"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/txtFriMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFriMonthText" />

        <EditText
            android:id="@+id/edtFriMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtFriRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFriRevenueText"/>

        <EditText
            android:id="@+id/edtFriRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/txtFriRevenueDefault"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btnFriSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate"
            android:layout_marginTop="15dp"
            android:background="@color/btnBG"
            android:textColor="@color/btnText" />

        <TextView
            android:id="@+id/txtFriResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtFriRedirect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/btnGoToRpr"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnStartRprText"
            android:onClick="startRpr"
            android:visibility="invisible"
            android:background="@color/btnBG"
            android:textColor="@color/btnText" />

    </LinearLayout>

</ScrollView>


