<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="nu.douhan.madonomics.FundCostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" >
            <requestFocus />
        </LinearLayout>

        <TextView
            android:id="@+id/txtFundCostIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/txtFundCostIntroText" />

        <TextView
            android:id="@+id/txtFundCostInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFundCostInvestText" />

        <EditText
            android:id="@+id/edtFundCostInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtFundCostRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFundCostRevenueText" />

        <EditText
            android:id="@+id/edtFundCostRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtFundCostYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFundCostYearsText" />

        <EditText
            android:id="@+id/edtFundCostYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtFundCostFeeA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFundCostFeeAText" />

        <EditText
            android:id="@+id/edtFundCostFeeA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtFundCostFeeB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFundCostFeeBText" />

        <EditText
            android:id="@+id/edtFundCostFeeB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnFundCostSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate"
            android:layout_marginTop="15dp"
            android:background="@color/btnBG"
            android:textColor="@color/btnText" />

        <TextView
            android:id="@+id/txtFundCostAResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtFundCostBResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/txtFundCostTotalResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/text" />

    </LinearLayout>
</ScrollView>
